--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,15 @@ header a:hover {
   transform: translate(1px, 1px);
 }
 
+footer{
+  position: fixed;
+  bottom: 0;
+  padding: 20px;
+  height: 60px;
+  width: 100%;
+  background-color: #4D4D4D;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  color: #AAAAAA;
+}
