--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 700px;
+  height: 800px;
   min-height: 450px;
   color: white;
   padding: 150px 23px;
@@ -21,8 +21,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 75%;
-  margin: 0 auto;
+  width: 80%;
+  margin: 10px auto 0;
 }
 
 .home-container h1 {
@@ -58,13 +58,14 @@
 
 /*** ABOUT PAGE ***/
 .about-page-container{
-  width: 70%;
+  width: 60%;
   margin: 0 auto;
   justify-content: center;
 }
 
 .about-hero-image {
-  width: 80%;
+  width: 100%;
+  height: 500px;
 }
 
 .about-page-content {
@@ -108,7 +109,7 @@
  grid-template-columns: repeat(3, 1fr);
   text-align: left;
   width: 80%;
-  margin: 90px auto 0;
+  margin: 50px auto 0;
   gap: 25px;
 }
 
@@ -142,7 +143,7 @@
 }
 
 .van-price span{
-  font-weight: 600;
+  font-weight: 700;
   font-size: 20px;
   line-height: 25px;
 }
@@ -165,18 +166,9 @@
 /*** VAN DETAIL PAGE ***/
 
 .van-detail-container {
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
-}
-
-.van-detail-container .back-button {
-  color: black;
-  text-decoration: none;
-}
-
-
-.van-detail-container .back-button span {
-  text-decoration: underline;
+  text-align: left;
 }
 
 .van-detail {
@@ -186,15 +178,22 @@
 }
 
 .van-detail img {
-  width: 600px;
-  height: 500px;
+  width: 100%;
+  height: 650px;
   border-radius: 5px;
   align-self: center;
+  margin-bottom: 30px;
+}
+
+.van-detail-container .van-price {
+  display: flex;
+  flex-direction: row;
+  text-align: left;
 }
 
 .van-detail h2 {
   font-size: 2rem;
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 
 .van-detail > i {
@@ -206,14 +205,10 @@
   margin-bottom: 10px;
 }
 
-.van-detail .van-price span {
-  font-weight: 700;
-  font-size: 1.5rem;
-}
-
 .van-detail .link-button {
   background-color: #FF8C38;
   color: white;
   font-size: 1.125rem;
+  margin-top: 10px;
 }
 
