--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* background-color: #242424; */
+  background-color: #FFF7ED;
+
 }
 
 * {
@@ -12,9 +13,10 @@
   padding: 0;
 }
 
-html, body {
+/* html, body {
   background-color: #FFF7ED;
-}
+
+} */
 
 body::-webkit-scrollbar {
 display: none;
@@ -26,10 +28,10 @@ scrollbar-width: none;
 }
 
 header {
-  height: 120px;
+  height: 100px;
   display: flex;
   align-items: center;
-  padding-block: 10px;
+  padding: 0 60px;
 }
 
 header .site-logo {
