--- a/src/App.css
+++ b/src/App.css
@@ -230,3 +230,47 @@
   font-weight: 600;
 }
 
+/*Host Vans*/
+.host-van-link-wrapper {
+  color: unset;
+  text-decoration: unset;
+  
+}
+
+.host-vans-list {
+  padding-inline: 26px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.host-vans-title {
+  padding-inline: 26px;
+  margin-bottom: 40px;
+}
+
+.host-van-single {
+  display: flex;
+  align-items: center;
+  background-color: #f1ebebc0;
+  padding-block: 18px;
+  padding-left: 24px;
+  margin-bottom: 15px;
+}
+
+.host-van-single > img {
+  height: 70px;
+  border-radius: 5px;
+  margin-right: 17px;
+}
+
+.host-van-info h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-block: 10px;
+}
+
+.host-van-info p {
+  margin-block: 10px;
+  text-align: left;
+}
+
