--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,9 @@
 
 /*** VANS PAGE ***/
 .vans{
- display: grid;
- grid-template-columns: repeat(3, 1fr);
+  /* TODO fix the columns with auto-fill/auto-fit */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr);
   text-align: left;
   width: 80%;
   margin: 50px auto 0;
