--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@
 .vans{
   /* TODO fix the columns with auto-fill/auto-fit */
   display: grid;
-  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   text-align: left;
   width: 80%;
   margin: 50px auto 0;
