--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,18 @@ header a:hover {
   transform: translate(1px, 1px);
 }
 
+.back-button {
+  display: block;
+  color: black;
+  text-decoration: none;
+  margin-top: 60px;
+  margin-left: 26px;
+}
+
+.back-button span:hover {
+  text-decoration: underline;
+}
+
 footer{
   position: fixed;
   bottom: 0;
