--- a/src/App.css
+++ b/src/App.css
@@ -106,15 +106,16 @@
   /* TODO fix the columns with auto-fill/auto-fit */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  text-align: left;
-  width: 80%;
-  margin: 50px auto 0;
-  gap: 25px;
-
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around; */
+  
  
+}
+
+.vans{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; 
+  width: 80%;
+  margin: 0 auto;
 }
 
 .van-header {
@@ -127,10 +128,29 @@
 }
 
 .van-card {
-  height: 350px;
-  width: 350px;
+  height: 360px;
+  width: 360px;
   margin-bottom: 100px;
+  margin: 0 20px 150px 0;
 }
+
+@media screen and (max-width: 1200px){
+  .vans{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .van-card {
+    height: 250px;
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 800px){
+  .vans{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 
 .van-card img {
   width: 100%;
@@ -186,19 +206,21 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 20px 0;
 }
 
 .van-type {
   height: 34px;
-  padding: 6px 20px;
+  padding: 5px 14px;
   font-style: normal;
   font-weight: 500;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #ffead0;
   color: #4d4d4d;
   transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
   margin: 18px;
+  font-size: 13px;
 }
 
 .van-type:hover {
@@ -208,10 +230,6 @@
 
 .van-type:focus {
   outline: none;
-}
-
-.van-type.selected {
-  color: #ffead0;
 }
 
 .van-type.simple:hover,
@@ -237,20 +255,30 @@
 /*** VAN DETAIL PAGE ***/
 
 .van-detail-container {
-  width: 50%;
-  margin: 0 auto;
-  text-align: left;
+  display: flex;
+  justify-content: center;
 }
 
-.van-detail {
-  display: flex;
-  flex-direction: column;
+.van-detail {  
   color: #161616;
+  width: 35%;
 }
+
+@media screen and (max-width: 1200px) {
+  .van-detail {  
+    width: 50%;
+  }  
+}
+
+@media screen and (max-width: 900px) {
+  .van-detail {  
+    width: 80%;
+  }  
+}
+
 
 .van-detail img {
   width: 100%;
-  height: 650px;
   border-radius: 5px;
   align-self: center;
   margin-bottom: 30px;
@@ -281,6 +309,7 @@
   color: white;
   font-size: 1.125rem;
   margin-top: 10px;
+  align-self: center;
 }
 
 /* edit */
