--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 /*** HOME PAGE ***/
 .home-container {
-  background: linear-gradient(0deg, rgba(134, 102, 102, 0.46), rgba(0, 0, 0, 0.46)),
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
     url('./assets/images/home-hero.png') no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -470,5 +470,22 @@
 .host-van-detail-image {
   height: 100px;
   border-radius: 5px;
+}
+
+
+/* 404 */
+.NotFound-page{
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 40px;
+  text-align: center;
+}
+
+.NotFound-page .link-button {
+  background-color: #161616;
+  color: white;
+  font-size: 16px;
+  display: block;  
+  margin-top: 50px;
 }
 
