--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  background-color: #FFF7ED;
-
+  background-color: #fff7ed;
 }
 
 * {
@@ -14,12 +12,12 @@
 }
 
 body::-webkit-scrollbar {
-display: none;
+  display: none;
 }
 
 body {
--ms-overflow-style: none;
-scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 header {
@@ -37,7 +35,7 @@ header .site-logo {
   font-size: 25px;
 }
 
-a.active-link{
+a.active-link {
   font-weight: bold;
   text-decoration: underline;
   color: #161616;
@@ -45,7 +43,7 @@ a.active-link{
 
 header a {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 600;
   padding: 5px 15px;
 }
@@ -60,12 +58,12 @@ header a:hover {
   text-align: center;
   text-decoration: none;
   border: none;
-  padding: .75rem 1.375rem;
+  padding: 0.75rem 1.375rem;
   color: initial;
   font-weight: 700;
   border-radius: 5px;
   cursor: pointer;
-  transition: transform .1s ease-in-out;
+  transition: transform 0.1s ease-in-out;
 }
 
 .link-button:hover {
@@ -84,26 +82,25 @@ header a:hover {
   text-decoration: underline;
 }
 
-footer{
+footer {
   position: fixed;
   bottom: 0;
   padding: 20px;
   height: 60px;
   width: 100%;
-  background-color: #4D4D4D;
+  background-color: #4d4d4d;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  color: #AAAAAA;
+  color: #aaaaaa;
   text-align: center;
-
 }
 
-.spacer{
-  margin-bottom: 60px; /* how high is your footer */
-  visibility: hidden; 
+.spacer {
+  margin-bottom: 60px; /* footer height */
+  visibility: hidden;
 }
 
-.loader{
+.loader {
   text-align: center;
 }
