--- a/src/App.css
+++ b/src/App.css
@@ -486,7 +486,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 500px;    
+  max-width: 500px; 
+  margin-top: 18px;   
 }
 
 .login-form > input {
